browser/themes/osx/browser.css
/
*
This
Source
Code
Form
is
subject
to
the
terms
of
the
Mozilla
Public
*
License
v
.
2
.
0
.
If
a
copy
of
the
MPL
was
not
distributed
with
this
*
file
You
can
obtain
one
at
http
:
/
/
mozilla
.
org
/
MPL
/
2
.
0
/
.
*
/
import
url
(
"
chrome
:
/
/
global
/
skin
/
"
)
;
%
include
shared
.
inc
%
filter
substitution
%
define
forwardTransitionLength
150ms
%
define
conditionalForwardWithUrlbar
window
:
not
(
[
chromehidden
~
=
"
toolbar
"
]
)
#
urlbar
-
container
%
define
conditionalForwardWithUrlbarWidth
27
%
define
toolbarButtonPressed
:
hover
:
active
:
not
(
[
disabled
=
"
true
"
]
)
:
not
(
[
customizableui
-
areatype
=
"
menu
-
panel
"
]
)
namespace
url
(
"
http
:
/
/
www
.
mozilla
.
org
/
keymaster
/
gatekeeper
/
there
.
is
.
only
.
xul
"
)
;
namespace
html
url
(
"
http
:
/
/
www
.
w3
.
org
/
1999
/
xhtml
"
)
;
#
urlbar
:
-
moz
-
lwtheme
:
not
(
[
focused
=
"
true
"
]
)
.
searchbar
-
textbox
:
-
moz
-
lwtheme
:
not
(
[
focused
=
"
true
"
]
)
{
opacity
:
.
9
;
}
#
navigator
-
toolbox
:
:
after
{
-
moz
-
box
-
ordinal
-
group
:
101
;
/
*
tabs
toolbar
is
100
*
/
background
-
image
:
linear
-
gradient
(
to
top
hsla
(
0
0
%
0
%
.
15
)
hsla
(
0
0
%
0
%
.
15
)
1px
hsla
(
0
0
%
100
%
.
15
)
1px
hsla
(
0
0
%
100
%
.
15
)
2px
transparent
3px
)
;
content
:
"
"
;
display
:
-
moz
-
box
;
height
:
2px
;
margin
-
top
:
-
2px
;
position
:
relative
;
z
-
index
:
2
;
/
*
navbar
is
at
1
*
/
}
#
navigator
-
toolbox
toolbarbutton
:
-
moz
-
lwtheme
{
color
:
inherit
;
text
-
shadow
:
inherit
;
}
#
main
-
window
{
-
moz
-
appearance
:
none
;
background
-
color
:
#
eeeeee
;
}
#
titlebar
-
buttonbox
>
.
titlebar
-
button
{
display
:
none
;
}
/
*
Fullscreen
and
caption
buttons
don
'
t
move
with
RTL
on
OS
X
so
override
the
automatic
ordering
.
*
/
.
titlebar
-
placeholder
[
type
=
"
fullscreen
-
button
"
]
:
-
moz
-
locale
-
dir
(
ltr
)
.
titlebar
-
placeholder
[
type
=
"
caption
-
buttons
"
]
:
-
moz
-
locale
-
dir
(
rtl
)
{
-
moz
-
box
-
ordinal
-
group
:
1000
;
}
.
titlebar
-
placeholder
[
type
=
"
caption
-
buttons
"
]
:
-
moz
-
locale
-
dir
(
ltr
)
.
titlebar
-
placeholder
[
type
=
"
fullscreen
-
button
"
]
:
-
moz
-
locale
-
dir
(
rtl
)
{
-
moz
-
box
-
ordinal
-
group
:
0
;
}
#
titlebar
{
padding
-
top
:
9px
;
}
#
main
-
window
[
chromehidden
~
=
"
toolbar
"
]
>
#
titlebar
{
padding
-
top
:
22px
;
}
#
main
-
window
:
not
(
:
-
moz
-
lwtheme
)
:
not
(
[
privatebrowsingmode
=
temporary
]
)
>
#
titlebar
{
-
moz
-
appearance
:
-
moz
-
window
-
titlebar
;
}
#
main
-
window
[
chromehidden
~
=
"
toolbar
"
]
[
chromehidden
~
=
"
location
"
]
[
chromehidden
~
=
"
directories
"
]
{
border
-
top
:
1px
solid
rgba
(
0
0
0
0
.
65
)
;
}
#
navigator
-
toolbox
>
toolbar
:
not
(
#
toolbar
-
menubar
)
:
not
(
#
TabsToolbar
)
{
-
moz
-
box
-
align
:
center
;
padding
:
2px
4px
;
}
/
*
Because
of
-
moz
-
box
-
align
:
center
above
separators
will
be
invisible
unless
we
set
their
min
-
height
.
See
bug
583510
for
more
information
.
*
/
toolbarseparator
{
min
-
height
:
22px
;
}
#
navigator
-
toolbox
>
toolbar
:
not
(
#
TabsToolbar
)
:
not
(
#
nav
-
bar
)
:
not
(
:
-
moz
-
lwtheme
)
{
-
moz
-
appearance
:
none
;
background
:
url
(
chrome
:
/
/
browser
/
skin
/
Toolbar
-
background
-
noise
.
png
)
hsl
(
0
0
%
83
%
)
;
}
#
nav
-
bar
{
-
moz
-
appearance
:
none
;
padding
-
top
:
4px
!
important
;
padding
-
bottom
:
4px
!
important
;
background
:
url
(
chrome
:
/
/
browser
/
skin
/
Toolbar
-
background
-
noise
.
png
)
linear
-
gradient
(
hsl
(
0
0
%
93
%
)
hsl
(
0
0
%
83
%
)
)
;
background
-
clip
:
border
-
box
;
background
-
origin
:
border
-
box
!
important
;
box
-
shadow
:
inset
0
1px
0
hsla
(
0
0
%
100
%
.
4
)
;
margin
-
top
:
-
1px
;
/
*
Position
the
toolbar
above
the
bottom
of
background
tabs
*
/
position
:
relative
;
z
-
index
:
1
;
}
#
navigator
-
toolbox
>
toolbar
:
not
(
#
TabsToolbar
)
:
-
moz
-
lwtheme
{
background
-
color
:
toolbarColorLWT
;
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
Toolbar
-
background
-
noise
.
png
)
;
}
#
PersonalToolbar
:
not
(
:
-
moz
-
lwtheme
)
:
-
moz
-
window
-
inactive
#
nav
-
bar
:
not
(
:
-
moz
-
lwtheme
)
:
-
moz
-
window
-
inactive
{
background
-
color
:
-
moz
-
mac
-
chrome
-
inactive
;
}
/
*
-
-
-
-
-
BOOKMARK
TOOLBAR
-
-
-
-
-
*
/
#
personal
-
bookmarks
{
min
-
height
:
17px
;
/
*
16px
button
height
+
1px
margin
-
bottom
*
/
}
toolbarbutton
.
chevron
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
icons
/
chevron
.
png
"
)
;
margin
:
1px
0
0
;
padding
:
0
;
}
toolbarbutton
.
chevron
>
.
toolbarbutton
-
text
{
display
:
none
;
}
toolbarbutton
.
chevron
:
-
moz
-
locale
-
dir
(
rtl
)
>
.
toolbarbutton
-
icon
{
transform
:
scaleX
(
-
1
)
;
}
media
(
min
-
resolution
:
2dppx
)
{
toolbarbutton
.
chevron
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
icons
/
chevron
2x
.
png
"
)
;
}
toolbarbutton
.
chevron
>
.
toolbarbutton
-
icon
{
width
:
13px
;
}
}
/
*
-
-
-
-
-
BOOKMARK
BUTTONS
-
-
-
-
-
*
/
toolbarbutton
.
bookmark
-
item
#
personal
-
bookmarks
[
customizableui
-
areatype
=
"
toolbar
"
]
>
#
bookmarks
-
toolbar
-
placeholder
{
font
-
weight
:
bold
;
color
:
#
222
;
border
:
0
;
border
-
radius
:
10000px
;
padding
:
1px
8px
;
margin
:
0
0
1px
;
}
.
bookmark
-
item
>
.
toolbarbutton
-
menu
-
dropmarker
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
places
/
folderDropArrow
.
png
"
)
;
-
moz
-
image
-
region
:
rect
(
0
7px
5px
0
)
;
margin
-
top
:
1px
;
-
moz
-
margin
-
start
:
3px
;
-
moz
-
margin
-
end
:
-
2px
;
}
media
(
min
-
resolution
:
2dppx
)
{
.
bookmark
-
item
>
.
toolbarbutton
-
menu
-
dropmarker
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
places
/
folderDropArrow
2x
.
png
"
)
;
-
moz
-
image
-
region
:
rect
(
0
14px
10px
0
)
;
}
.
bookmark
-
item
>
.
toolbarbutton
-
menu
-
dropmarker
>
.
dropmarker
-
icon
{
width
:
7px
;
}
}
/* ... */

